Bug 271192 - Email header fields saved empty when contains unicode characters and punctuation (dash, dot)
Summary: Email header fields saved empty when contains unicode characters and punctuat...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: HI major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 271238 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-18 07:34 UTC by Murz
Modified: 2011-08-03 10:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Murz 2011-04-18 07:34:35 UTC
Version:           Git (master) (using KDE 4.6.2) 
OS:                Linux

Tested on kdepim from GIT 2011-04-17, and can reproduce on earlier versions (beta4) from 2011-01-15.

If I fill from, to, cc, bcc fields with text: 
Интернет компания example <example@example.com>
it saves and sends normally.

But if I add dash to the name:
Интернет-компания example <example@example.com>
it saves and sends with this field empty!
This field is absent in message source:


I test English equivalents:
Internet-company example <example@example.com>
Internet-company my-very-very-long-name-of-company.com <example@example.com>
and its works normally, so the problem, I think, is near utf-8 decoding.

Here is screenshots:
Message creating dialog: http://wstaw.org/m/2011/04/18/plasma-desktopmK2613.jpg
Saved message: http://wstaw.org/m/2011/04/18/plasma-desktopQf2613.jpg

Reproducible: Always

Steps to Reproduce:
1. Create new message, fill "Интернет-компания example <example@example.com>" to the "To" field.
2. Save as draft.
3. Look at the field "to" in saved message from drafts folder

Actual Results:  
"To" field is empty, and it absent in message source!

Expected Results:  
"To" field must contain "Интернет-компания example <example@example.com>"
Comment 1 Thomas McGuire 2011-04-19 11:31:55 UTC
*** Bug 271238 has been marked as a duplicate of this bug. ***
Comment 2 Thomas McGuire 2011-04-19 11:36:02 UTC
Adding as a release showstopper, silently dropping recipients is quite bad.
Comment 3 Thomas McGuire 2011-04-19 16:41:14 UTC
Git commit de7b0dc1f1d2dad70b316304da88ab8a9df91260 by Thomas McGuire.
Committed on 19/04/2011 at 16:39.
Pushed by tmcguire into branch 'master'.

Use encodeRFC2047Sentence() to properly encode mailboxes.

BUG: 271192

M  +1    -1    kmime/kmime_header_parsing.cpp     
M  +3    -2    kmime/kmime_headers.cpp     

http://commits.kde.org/kdepimlibs/de7b0dc1f1d2dad70b316304da88ab8a9df91260
Comment 4 Thomas McGuire 2011-04-19 16:49:30 UTC
Git commit 65cc572f802cc6ba8e19b1c39c9e14f473acd5a6 by Thomas McGuire.
Committed on 19/04/2011 at 16:39.
Pushed by tmcguire into branch '4.6'.

Use encodeRFC2047Sentence() to properly encode mailboxes.

BUG: 271192
(cherry picked from commit de7b0dc1f1d2dad70b316304da88ab8a9df91260)

M  +1    -1    kmime/kmime_header_parsing.cpp     
M  +3    -2    kmime/kmime_headers.cpp     

http://commits.kde.org/kdepimlibs/65cc572f802cc6ba8e19b1c39c9e14f473acd5a6
Comment 5 Thomas McGuire 2011-04-19 16:50:18 UTC
This bug is now fixed in the recent version of kdepimlibs (either master or 4.6).
Comment 6 Murz 2011-04-20 07:06:27 UTC
Confirm fixing, all goes to work normally.