Use encodeRFC2047Sentence() to properly encode mailboxes.

BUG: 271192
(cherry picked from commit de7b0dc1f1d2dad70b316304da88ab8a9df91260)